test/compilable/extra-files/pkg/datetime/package.d
module pkg.datetime;
public import pkg.datetime.common;
//alias std.datetime.common.def def;
