test/fail_compilation/imports/dip22b.d
module imports.dip22b;
// this public import only exports symbols that are visible within this module
public import pkg.dip22c;
